# traceoflight-dev

./: .gitattributes  .gitignore  Jenkinsfile  README.md  tmp-writer-new-auth.html
apps/api/: .dockerignore  .env.api.example  .env.example  .env.test.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.test  README.md  alembic.ini  pyproject.toml
apps/api-rs/: .dockerignore  .env.api-rs.example  .gitattributes  .gitignore  Cargo.toml  Dockerfile
apps/api-rs/scripts/: seed_sqlx_migrations.sql
apps/api-rs/src/: auth.rs  config.rs  error.rs  imports.rs  indexnow.rs  main.rs  media.rs  media_refs.rs  pdf_assets.rs  posts.rs  projects.rs  series_projection.rs  site_profile.rs  tags.rs
apps/api/.config/: nextest.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0011_add_admin_operational_credentials.py  20260303_0001_initial_schema.py  20260304_0002_add_post_visibility.py  20260305_0003_add_tags_and_post_tags.py  20260305_0004_add_series_tables.py  20260305_0005_add_posts_series_title.py  20260311_0006_add_project_profiles.py  20260311_0007_add_project_detail_video.py  20260312_0008_promote_top_media_to_posts.py  20260312_0009_add_list_order_indexes.py  20260313_0010_add_post_comments.py  20260324_0012_add_site_profiles.py  20260503_0013_add_post_locales.py  20260504_0014_add_translated_from_hash.py  20260504_0015_add_post_locale_slug_uniqueness.py  20260504_0016_add_series_locales.py  20260504_0017_cleanup_series_posts_locale.py  20260506_0018_add_slug_redirect_tables.py
apps/api/migrations/: 20260507000000_initial_schema.sql  20260510080000_cleanup_legacy_schema.sql
apps/api/scripts/: entrypoint.sh  export_openapi.py  prestart.py  rebuild_translations.py  seed_sqlx_migrations.sql  setup-test-db.ps1  setup-test-db.sh  test-local.sh
apps/api/src/: admin_auth.rs  auth.rs  cleanup.rs  comments.rs  config.rs  db.rs  error.rs  imports.rs  indexnow.rs  lib.rs  list_params.rs  main.rs  media.rs  media_refs.rs  migration.rs  observability.rs  pdf_assets.rs  posts.rs  projects.rs  routes.rs  serializers.rs  series.rs  series_projection.rs  site_profile.rs  tags.rs
apps/api/src/admin_auth/: codec.rs  store.rs
apps/api/src/app/: main.py
apps/api/src/app/api/: deps.py  error_handlers.py  security.py
apps/api/src/app/core/: config.py  constants.py  (+4 more)
apps/api/src/entities/: admin_credential.rs  enums.rs  media_asset.rs  mod.rs  post.rs  post_comment.rs  post_slug_redirect.rs  post_tag.rs  project_profile.rs  series.rs  series_post.rs  series_slug_redirect.rs  site_profile.rs  tag.rs
apps/api/src/imports/: codec.rs  restore.rs
apps/api/src/posts/: model.rs  queries.rs  service.rs  utils.rs
apps/api/src/routes/: admin.rs  backup.rs  comments.rs  infra.rs  media.rs  pdf.rs  posts.rs  projects.rs  series.rs  site_profile.rs  tags.rs
apps/api/src/translation/: hash.rs  markdown.rs  mod.rs  provider.rs  queue.rs  worker.rs
apps/api/tests/: posts.rs  schema_guards.rs  smoke.rs
apps/api/tests/api/: test_admin_auth_api.py  test_health.py  test_imports_api.py  test_media_upload_proxy.py  test_model_enum_mapping.py  test_openapi_docs.py  test_openapi_series_docs.py  test_post_comments_api.py  test_post_comments_migration.py  test_post_redirects_api.py  test_post_series_context_api.py  test_post_summaries_api.py  test_post_tags_repository.py  test_posts_access_guard.py  test_posts_admin_edit_delete.py  test_project_model_mapping.py  test_projects_api.py  test_projects_locale_filter.py  test_resume_api.py  test_series_api.py  test_series_locale_filter.py  test_series_model_mapping.py  test_series_redirects_api.py  test_site_profile_api.py  test_tags_api.py
apps/api/tests/common/: app.rs  factories.rs  http.rs  mod.rs
apps/api/tests/repositories/: test_slug_redirect_repository.py
apps/api/tests/services/: test_backup_restore.py  test_deepl_translation_provider.py  test_draft_cleanup_scheduler.py  test_import_archive_modules.py  test_import_service_series.py  test_indexnow_service.py  test_media_cleanup_service.py  test_post_comment_service.py  test_post_service_indexnow.py  test_post_service_series_refresh.py  test_post_service_slug_redirect.py  test_post_service_translation_sync.py  test_post_translation_markdown.py  test_post_translation_service.py  test_project_service.py  test_resume_service.py  test_series_order_normalization.py  test_series_projection_cache.py  test_series_service.py  test_series_service_slug_redirect.py  test_series_translation_service.py  test_slug_redirect_cleanup_scheduler.py  test_translation_hash.py  test_translation_queue.py  test_translation_strategy.py  test_translation_worker.py
apps/api/tests/storage/: test_minio_client.py
(+537 files in other folders)
