[package]
name = "traceoflight-api-rs"
version = "0.0.1"
edition = "2024"
publish = false

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
zip = "2"
mime_guess = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "chrono", "uuid", "json"] }
dotenvy = "0.15"
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "request-id", "util", "cors"] }
axum-extra = { version = "0.10", features = ["query"] }
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum"] }
regex = "1"
argon2 = "0.5"
rusty-s3 = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
url = "2"
bytes = "1"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
redis = { version = "0.27", default-features = false, features = ["tokio-comp", "connection-manager"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
