[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traceoflight-api"
version = "0.1.0"
description = "TraceofLight backend API"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.8",
  "uvicorn[standard]==0.34.0",
  "sqlalchemy==2.0.38",
  "alembic==1.14.1",
  "psycopg[binary]==3.2.5",
  "pydantic-settings==2.7.1",
  "python-multipart==0.0.20",
  "minio==7.2.15",
  "redis==5.2.1",
  "deepl==1.20.0",
  "rq==2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "httpx==0.28.1",
  "ruff==0.9.2",
  "fakeredis==2.26.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
